--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll/dist/locomotive-scroll.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Unkempt:wght@400;700&family=Zen+Tokyo+Zoo&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Fascinate+Inline&display=swap');
+      
       </style>
     <title>Vite + React</title>
   </head>
